src/objects/MCC_Report_Users__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>MCC success/failure reporting email recipients</description>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <description>Used to capture the Destination org for sending the report</description>
        <label>Destination Org</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mass Case Creation Reporting Users</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Plan_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>